...
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/fgmt_jobsearch_et_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/jobsearch_field_margin_topbtm"
        android:layout_marginBottom="@dimen/jobsearch_field_margin_topbtm"
        android:singleLine="true"
        android:hint="@string/fgmt_jobsearch_label_title"
...
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"/>

    <Button
        android:id="@+id/fgmt_joblist_btn_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/jobsearch_field_margin_topbtm"
        android:layout_marginBottom="@dimen/jobsearch_field_margin_topbtm"
        android:text="@string/fgmt_jobsearch_btn_text_search"/>

...
